fix notify bug add adjust the whole page css

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -1,3 +1,4 @@
+@import "util/mixin.import.less";
 @import 'util/color.import.less';
 @import 'global/base.import.less';
 @import 'posts/index.import.less';
