--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,6 +1,13 @@
 <template name="footer">
   <div class="footer">
-      © 2014 <a href="https://github.com/cmeteor-org/cmeteor">CMeteor</a>
+      <div class="footer-meteor">
+          <a href="https://www.meteor.com"></a>
+      </div>
+      <div class="footer-cmeteor">
+          <small>
+              © {{year}} <a href="https://github.com/cmeteor-org/cmeteor">CMeteor</a>
+          </small>
+      </div>
   </div>
   <script src="http://s4.cnzz.com/z_stat.php?id=1253546497&web_id=1253546497" language="JavaScript"></script>
 </template>
