--- a/client/stylesheets/util/color.import.less
+++ b/client/stylesheets/util/color.import.less
@@ -2,3 +2,5 @@
 @color-header-bg: #ffffff;
 @color-content-div: #f1f1f1;
 @color-shadow: #e8e8e8;
+@color-edit: #cccccc;
+@color-input-outline: #6daaec;
