--- a/client/stylesheets/util/mixin.import.less
+++ b/client/stylesheets/util/mixin.import.less
@@ -11,3 +11,18 @@
   font-size: 1.2em !important;
   line-height: 1em;
 }
+
+.edit-div() {
+  height: 18em;
+  padding: 1em;
+  overflow: auto;
+  background-color: @color-header-bg;
+  border: 1px solid @color-edit;
+  outline: @color-input-outline;
+  width: 100%;
+  display: block;
+}
+.min-max-width {
+  max-width: 45em;
+  min-width: 22em;
+}
