--- a/client/views/pages/index.html
+++ b/client/views/pages/index.html
@@ -1,5 +1,5 @@
 <template name="index">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="main-index">
       {{#each posts}}
       <div class="index-row">
         <div class="title-div">
