--- a/client/views/pages/postEdit.html
+++ b/client/views/pages/postEdit.html
@@ -1,16 +1,14 @@
 <template name="postEdit">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+  <div class="post-edit-row">
+    <div class="post-edit-content">
       {{> errors}}
-      <fieldset>
         {{#with post}}
-        <textarea id="ta-post-title" class="form-control" rows="1" value="{{title}}"></textarea>
-        <textarea id="ta-post-content" class="form-control" rows="20" value="{{content}}"></textarea>
+        <input id="ta-post-title" class="form-control" value="{{title}}">
+        <div contenteditable="true" id="ta-post-content" class="form-control">{{content}}</div>
         {{/with}}
-        <p id="p-post-preview" style="display:none;" class="mk">
+        <div id="p-post-preview" style="display:none;" class="mk">
           {{#markdown}}{{{markdown_data}}}{{/markdown}}
-        </p>
-      </fieldset>
+        </div>
       <button id="btn-post-edit" type="button" class="btn btn-default">重新发布</button>
       <button id="btn-post-preview" type="button" class="btn btn-default" value="preview">预览</button>
     </div>
