--- a/client/views/pages/postSubmit.html
+++ b/client/views/pages/postSubmit.html
@@ -1,16 +1,20 @@
 <template name="postSubmit">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-      {{> errors}}
-      <fieldset>
-        <textarea id="ta-post-title" class="form-control" rows="1" placeholder="标题（字数8字以上）"></textarea>
-        <textarea id="ta-post-content" class="form-control" rows="20"></textarea> 
-        <p id="p-post-preview" style="display:none;" class="mk">
-          {{#markdown}}{{{markdown_data}}}{{/markdown}}
-        </p>
-      </fieldset>
-      <button id="btn-post-submit" type="button" class="btn btn-default">发布</button>
-      <button id="btn-post-preview" type="button" class="btn btn-default" value="preview">预览</button>
+    <div class="self-row">
+        <div class="submit-post-main">
+            {{> errors}}
+            <div class="user-post">
+                <div class="submit-post-title">
+                    <input id="ta-post-title" class="form-control" placeholder="标题（字数8字以上）">
+                </div>
+                <div class="submit-post-content">
+                    <div contenteditable="true" id="ta-post-content" class="form-control"></div>
+                </div>
+            </div>
+            <div id="p-post-preview" style="display:none;" class="mk">
+                {{#markdown}}{{{markdown_data}}}{{/markdown}}
+            </div>
+            <button id="btn-post-submit" type="button" class="btn btn-default">发布</button>
+            <button id="btn-post-preview" type="button" class="btn btn-default" value="preview">预览</button>
+        </div>
     </div>
-  </div>
 </template>
