modify preview div css style

--- a/client/stylesheets/posts/index.import.less
+++ b/client/stylesheets/posts/index.import.less
@@ -159,6 +159,11 @@
           margin-top: 1em;
           .edit-div();
         }
+        #p-post-preview {
+          margin-top:  1em;
+          .edit-div();
+          border: none;
+        }
       }
     }
     //replay end
